# agentic-engineer

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py
src/ae/: __init__.py  cli.py  context_builder.py  orchestrator.py  prompts.py  router.py  structured.py
src/ae/memory/: __init__.py  reflections.py  schema.py  store.py
src/ae/memory/code_index/: __init__.py  embeddings.py  (+4 more)
src/ae/models/: __init__.py  gpt5.py  llm_client.py
src/ae/phases/: __init__.py  analyze.py  base.py  design.py  diagnose.py  fix_violations.py  implement.py  local.py  plan.py  plan_adjust.py
src/ae/planning/: __init__.py  bootstrap.py  executor.py  schemas.py  task_filters.py
src/ae/policy/: __init__.py  capsule.txt  cpc.py
src/ae/tools/: __init__.py  coverage_map.py  gates.py  hygiene.py  patch.py  phase_logs.py  phase_replay.py  pytest_runner.py  scaffold.py  snippets.py  static_output.py  vcs.py  workspace_state.py
src/ae/utils/: __init__.py  slug.py
tests/: conftest.py  test_cli_init_plan.py  test_context_builder.py  test_coverage_map.py  test_gates_runner.py  test_gpt5_client.py  test_index_minimal.py  test_orchestrator_logging.py  test_policy_cpc.py  test_scaffold.py  test_store_minimal.py  test_tools_patch.py
tests/unit/: test_cli_render_plan_execution.py  test_local_phase_logic.py  test_phase_replay.py  test_plan_adjust_coercion.py  test_plan_adjust_request.py  test_plan_executor_followups.py  test_plan_executor_tests.py  test_planning_validation.py  test_planning_workspace_contracts.py  test_reflections_seed.py  test_snippets.py  test_workspace_state.py
